# sudogen

./: 1 Introduction.ipynb  2 Training.ipynb  3 Visualisations.ipynb  4 Testing.ipynb  README.md  lstm_model-en-GB.pth  lstm_model.pth  pyproject.toml
.ipynb_checkpoints/: 1 Introduction-checkpoint.ipynb  2 Training-checkpoint.ipynb  3 Visualisations-checkpoint.ipynb  4 Testing-checkpoint.ipynb  5 Initialization-checkpoint.ipynb
dictionaries/en-GB/: lemmas.json  pseudo-lemmas.json
locales/br/: 5 Initialization.ipynb  lemmas.json  lstm_model-br.pth  pseudo-lemmas.json  ratings.json
locales/br/.ipynb_checkpoints/: 5 Initialization-checkpoint.ipynb  lemmas-checkpoint.json  pseudo-lemmas-checkpoint.json  ratings-checkpoint.json
locales/cy_GB/: 1.ipynb  2.ipynb  3.ipynb  cy-freq.csv  cy_GB.dic  items.json  lemmae.json  lemmas.json  lstm_model-cy_GB.pth  pseudo-lemmae.json
locales/cy_GB/.ipynb_checkpoints/: 1-checkpoint.ipynb  2-checkpoint.ipynb  4-checkpoint.ipynb  lemmae-checkpoint.json  lemmas-checkpoint.json
locales/en-GB/: lstm_model-en-GB.pth
locales/fr/: 1.ipynb  2.ipynb  3.ipynb  4.ipynb  fr-frequencies.json  items.json  lemmae.json  lstm_model-fr.pth  pseudo-lemmae.json
locales/fr/.ipynb_checkpoints/: 3-checkpoint.ipynb  fr-frequencies-checkpoint.json  items-checkpoint.json  lemmae-checkpoint.json  pseudo-lemmae-checkpoint.json
locales/uk/: 1.ipynb  3.ipynb  4.ipynb  lstm_model-uk-UA.pth  pseudo-lemmae.json  ukrainian_frequencies.json
locales/uk/.ipynb_checkpoints/: 1-checkpoint.ipynb  (+2 more)
sudogen/: __init__.py  main.py  vocab_loader.py
