[tool.poetry]
name = "sudogen"
version = "0.1.0"
description = ""
authors = ["Alan Kersaudy <alan.kersaudy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.scripts]
sudogen = "sudogen.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
